[package]
name = "imgui-sdl2"
version = "0.1.0"
authors = ["Michael Fairley <michael@michaelfairley.com>"]
homepage = "https://github.com/michaelfairley/rust-imgui-sdl2"
repository = "https://github.com/michaelfairley/rust-imgui-sdl2"
readme = "README.md"
categories = ["gui"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "michaelfairley/rust-imgui-sdl2" }

[dependencies]
imgui = "0.0.18"
sdl2 = "0.31.0"

[dev-dependencies]
gl = "*"
imgui-opengl-renderer = "0.1.0"
