[package]
name = "imgui-sdl2"
description = "SDL2 Input handling for imgui-rs"
version = "0.15.0"
authors = ["Michael Fairley <michael@michaelfairley.com>"]
homepage = "https://github.com/michaelfairley/rust-imgui-sdl2"
repository = "https://github.com/michaelfairley/rust-imgui-sdl2"
readme = "README.md"
categories = ["gui"]
license = "MIT/Apache-2.0"

[dependencies]
imgui = "0.8"
sdl2 = ">=0.34, <0.36"

[dev-dependencies]
gl = "0.10.0"
imgui-opengl-renderer = "0.11.1"
